--- a/Mod12ChallengeFiles/credit_risk_resampling.ipynb
+++ b/Mod12ChallengeFiles/credit_risk_resampling.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -235,17 +235,18 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
-    "# YOUR CODE HERE!\n",
+    "lending_data_csv = Path(\"./Resources/lending_data.csv\")\n",
+    "lending_df = pd.read_csv(lending_data_csv)\n",
     "\n",
     "# Review the DataFrame\n",
-    "# YOUR CODE HERE!"
+    "lending_df.head()"
    ]
   },
   {
@@ -257,48 +258,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Separate the data into labels and features\n",
     "\n",
     "# Separate the y variable, the labels\n",
-    "# YOUR CODE HERE!]\n",
+    "y = lending_df[\"loan_status\"]\n",
     "\n",
     "# Separate the X variable, the features\n",
-    "# YOUR CODE HERE!"
+    "X = lending_df.drop(columns=\"loan_status\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    0\n",
-       "1    0\n",
-       "2    0\n",
-       "3    0\n",
-       "4    0\n",
-       "Name: loan_status, dtype: int64"
+       "0        0\n",
+       "1        0\n",
+       "2        0\n",
+       "3        0\n",
+       "4        0\n",
+       "        ..\n",
+       "77531    1\n",
+       "77532    1\n",
+       "77533    1\n",
+       "77534    1\n",
+       "77535    1\n",
+       "Name: loan_status, Length: 77536, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Review the y variable Series\n",
-    "# YOUR CODE HERE!"
+    "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -382,34 +389,109 @@
        "      <td>1</td>\n",
        "      <td>23000</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77531</th>\n",
+       "      <td>19100.0</td>\n",
+       "      <td>11.261</td>\n",
+       "      <td>86600</td>\n",
+       "      <td>0.653580</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>56600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77532</th>\n",
+       "      <td>17700.0</td>\n",
+       "      <td>10.662</td>\n",
+       "      <td>80900</td>\n",
+       "      <td>0.629172</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77533</th>\n",
+       "      <td>17600.0</td>\n",
+       "      <td>10.595</td>\n",
+       "      <td>80300</td>\n",
+       "      <td>0.626401</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77534</th>\n",
+       "      <td>16300.0</td>\n",
+       "      <td>10.068</td>\n",
+       "      <td>75300</td>\n",
+       "      <td>0.601594</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77535</th>\n",
+       "      <td>15600.0</td>\n",
+       "      <td>9.742</td>\n",
+       "      <td>72300</td>\n",
+       "      <td>0.585062</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>42300</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>77536 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   loan_size  interest_rate  borrower_income  debt_to_income  num_of_accounts  \\\n",
-       "0    10700.0          7.672            52800        0.431818                5   \n",
-       "1     8400.0          6.692            43600        0.311927                3   \n",
-       "2     9000.0          6.963            46100        0.349241                3   \n",
-       "3    10700.0          7.664            52700        0.430740                5   \n",
-       "4    10800.0          7.698            53000        0.433962                5   \n",
+       "       loan_size  interest_rate  borrower_income  debt_to_income  \\\n",
+       "0        10700.0          7.672            52800        0.431818   \n",
+       "1         8400.0          6.692            43600        0.311927   \n",
+       "2         9000.0          6.963            46100        0.349241   \n",
+       "3        10700.0          7.664            52700        0.430740   \n",
+       "4        10800.0          7.698            53000        0.433962   \n",
+       "...          ...            ...              ...             ...   \n",
+       "77531    19100.0         11.261            86600        0.653580   \n",
+       "77532    17700.0         10.662            80900        0.629172   \n",
+       "77533    17600.0         10.595            80300        0.626401   \n",
+       "77534    16300.0         10.068            75300        0.601594   \n",
+       "77535    15600.0          9.742            72300        0.585062   \n",
        "\n",
-       "   derogatory_marks  total_debt  \n",
-       "0                 1       22800  \n",
-       "1                 0       13600  \n",
-       "2                 0       16100  \n",
-       "3                 1       22700  \n",
-       "4                 1       23000  "
+       "       num_of_accounts  derogatory_marks  total_debt  \n",
+       "0                    5                 1       22800  \n",
+       "1                    3                 0       13600  \n",
+       "2                    3                 0       16100  \n",
+       "3                    5                 1       22700  \n",
+       "4                    5                 1       23000  \n",
+       "...                ...               ...         ...  \n",
+       "77531               12                 2       56600  \n",
+       "77532               11                 2       50900  \n",
+       "77533               11                 2       50300  \n",
+       "77534               10                 2       45300  \n",
+       "77535                9                 2       42300  \n",
+       "\n",
+       "[77536 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Review the X variable DataFrame\n",
-    "# YOUR CODE HERE!"
+    "X"
    ]
   },
   {
@@ -421,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -432,14 +514,14 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check the balance of our target values\n",
-    "# YOUR CODE HERE!"
+    "y.value_counts()"
    ]
   },
   {
@@ -451,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +542,7 @@
     "\n",
     "# Split the data using train_test_split\n",
     "# Assign a random_state of 1 to the function\n",
-    "# YOUR CODE HERE!"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
    ]
   },
   {
@@ -486,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +577,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,10 +588,10 @@
     "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "lr = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using training data\n",
-    "# YOUR CODE HERE!"
+    "lr.fit(X_train, y_train)"
    ]
   },
   {
@@ -521,12 +603,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prediction</th>\n",
+       "      <th>Actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Prediction  Actual\n",
+       "0           0       0\n",
+       "1           0       0\n",
+       "2           0       0\n",
+       "3           0       0\n",
+       "4           0       0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_pred = lr.predict(X_test)\n",
+    "\n",
+    "y_pred_results = pd.DataFrame({\n",
+    "    \"Prediction\": y_pred,\n",
+    "    \"Actual\": y_test\n",
+    "}).reset_index(drop=True)\n",
+    "\n",
+    "y_pred_results.head()"
    ]
   },
   {
@@ -544,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -553,19 +711,19 @@
        "0.9520479254722232"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Print the balanced_accuracy score of the model\n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -575,19 +733,19 @@
        "       [   56,   563]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +764,7 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -622,7 +780,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** The logistic regression model predicts the healthy loans ('0') near perfectly, indicated by the precision, recall and f1 vaues being 1.00 (or close enough to 1.00 for us to consider it perfect). The model also performs well in predicting the high-risk loans ('1'), with an f1 score of 0.88, though not as well as it does for predictions of healthy loans."
    ]
   },
   {
@@ -648,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,33 +815,33 @@
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "random_oversampler = RandomOverSampler(random_state=1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "X_resampled, y_resampled = random_oversampler.fit_resample(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    56271\n",
        "0    56271\n",
+       "1    56271\n",
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "y_resampled.value_counts()"
    ]
   },
   {
@@ -695,19 +853,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prediction</th>\n",
+       "      <th>Actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Prediction  Actual\n",
+       "0           0       0\n",
+       "1           0       0\n",
+       "2           0       0\n",
+       "3           0       0\n",
+       "4           0       0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "lr = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "lr.fit(X_resampled, y_resampled)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_resampled_pred = lr.predict(X_test)\n",
+    "\n",
+    "y_resampled_pred_results = pd.DataFrame({\n",
+    "    \"Prediction\": y_resampled_pred,\n",
+    "    \"Actual\": y_test\n",
+    "}).reset_index(drop=True)\n",
+    "\n",
+    "y_resampled_pred_results.head()"
    ]
   },
   {
@@ -725,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -734,19 +968,19 @@
        "0.9936781215845847"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy_score(y_test, y_resampled_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -756,19 +990,19 @@
        "       [    4,   615]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion_matrix(y_test, y_resampled_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +1021,7 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report_imbalanced(y_test, y_resampled_pred))"
    ]
   },
   {
@@ -803,7 +1037,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** The logistic regression model fit with oversampled data predicts both the healthy lone ('0') and the high-risk loan ('1') labels almost perfectly."
    ]
   }
  ],
@@ -823,7 +1057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
